--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,7 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+ 
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -35,4 +31,42 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+#navbar{
+  background-color: rgb(23, 18, 18);
+  width: 99%;
+  height: 80px;
+  border-radius: 8px;
+  margin: auto;
+  display: flex;
+  padding: 5px;
+  justify-content:space-around ;
+}
+#navbar > .logo > img{
+  border: 1px solid green;
+  width: 80px;
+  height: 80px;
+  border-radius: 10px;
+}
+ 
+#navbar > .section > ul{
+  color: white;
+  list-style: none;
+  display: flex;
+   
+  
+   
+}
+li{
+  padding: 5px;
+}
+#navbar > .btn{
+  color: white;
+   margin-top: 18px;
+   background-color: #61dafb;
+   border-radius: 10px;
+   width: 70px;
+   height: 30px;
+  
 }
