--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+#navbar{
+  background-color: rgb(23, 18, 18);
+  width: 99%;
+  height: 80px;
+  border-radius: 8px;
+  margin: auto;
+}
